Replication Steps: 1) Open LibreOffice Calc. 2) Go to a new cell and write some text. Do not click outside the cell. Keep the editing line inside the cell. 3) With the mouse, press the "new sheet" button on the bottom left corner. Expected behavior: a) A new blank sheet is created or b) The action is not possible (Microsoft Excel behavior). It is blocked until we click outside the edited cell. Actual Behavior: The blank sheet contains the new edited cell and the old sheet is empty.
I can confirm this behaviour (with LO 4.0.2.2 in Windows 8). It is not intuitive but does not seem to be a bug either because no information is lost.
I do not know if this is fixed but I cannot reproduce this bug anymore in LO 4.3.0.1 Text remains in the old sheet
either my report from 27th June was incorrect or something has changed. The behaviour described in the bug report is still/again present in 4.3.1.1
Confirm reproduced with 3.5.7.2, 4.2.6.2, 4.3.1.1 - Ubuntu 12.04 x86 LO 3.3.0.4 seems behave as expected, new empty sheet created & edited cell in old sheet still exist. I also don't know whether it's a bug or by design. Setting NEW temporarily
*** Bug 86673 has been marked as a duplicate of this bug. ***
git bisect log # bad: [423a84c4f7068853974887d98442bc2a2d0cc91b] source-hash-c15927f20d4727c3b8de68497b6949e72f9e6e9e # good: [65fd30f5cb4cdd37995a33420ed8273c0a29bf00] source-hash-d6cde02dbce8c28c6af836e2dc1120f8a6ef9932 git bisect start 'latest' 'oldest' # bad: [e02439a3d6297a1f5334fa558ddec5ef4212c574] source-hash-6b8393474974d2af7a2cb3c47b3d5c081b550bdb git bisect bad e02439a3d6297a1f5334fa558ddec5ef4212c574 # bad: [8f4aeaad2f65d656328a451154142bb82efa4327] source-hash-1885266f274575327cdeee9852945a3e91f32f15 git bisect bad 8f4aeaad2f65d656328a451154142bb82efa4327 # bad: [369369915d3582924b3d01c9b01167268ed38f3b] source-hash-45295f3cdceb4c289553791071b5d7f4962d2ec4 git bisect bad 369369915d3582924b3d01c9b01167268ed38f3b # bad: [351622aec2dff3cc3bbbb020ad0097c4322d2a21] source-hash-2c4537471c932b65e6f72e41881b505c4bbad12c git bisect bad 351622aec2dff3cc3bbbb020ad0097c4322d2a21 # good: [035c276ec5a8da669e6043a3db6b0701dd3c2ade] source-hash-dc8249af103741415a074d9bbf8b1211f24a7c3f git bisect good 035c276ec5a8da669e6043a3db6b0701dd3c2ade # bad: [d1cca78ab77d64482b6643bc643d29dbe2dd1442] source-hash-2d19e9bb07ccff3134f855812dddfda5c07b1fe4 git bisect bad d1cca78ab77d64482b6643bc643d29dbe2dd1442 # bad: [bd61690e049a1941a9a555c391165d4cf7288e3b] source-hash-1ca547d20882e9b3d3ba9a6c7ee0340a5b7009b0 git bisect bad bd61690e049a1941a9a555c391165d4cf7288e3b # good: [522a31bbab6f0abeca2e5bcf565c399850746298] source-hash-418a35f4861e863feb39eec73f4a39a87fbcb1f3 git bisect good 522a31bbab6f0abeca2e5bcf565c399850746298 # bad: [edfa0e7d756a6bd772cd39f890e5308251fe72f5] source-hash-6598e65cfcabd270199d09d11d9d93639bca620d git bisect bad edfa0e7d756a6bd772cd39f890e5308251fe72f5 # bad: [1a972e6e9fb1e5c730658348e2231151310c09f9] source-hash-c5e280b4144d3ed642404079f464a42829be3f80 git bisect bad 1a972e6e9fb1e5c730658348e2231151310c09f9 # first bad commit: [1a972e6e9fb1e5c730658348e2231151310c09f9] source-hash-c5e280b4144d3ed642404079f464a42829be3f80 http://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=418a35f4861e863feb39eec73f4a39a87fbcb1f3..c5e280b4144d3ed642404079f464a42829be3f80
*** Bug 91630 has been marked as a duplicate of this bug. ***
Migrating Whiteboard tags to Keywords: (bibisected) [NinjaEdit]
*** Bug 100430 has been marked as a duplicate of this bug. ***
The problem is fixed in current master by reverting the following single commit (thanks raal for bibisection!): https://cgit.freedesktop.org/libreoffice/core/commit/?id=88f91adf266f19659014df22e09ce6c6761fb6f1 author Markus Mohrhard <markus.mohrhard@googlemail.com> 2011-10-31 20:38:44 (GMT) committer Markus Mohrhard <markus.mohrhard@googlemail.com> 2011-10-31 20:40:59 (GMT) commit 88f91adf266f19659014df22e09ce6c6761fb6f1 tree d6082d5b2036011ebf226849263f408afb115ce5 parent 0ca429a00b6fca4eed328d106e95b447dd813e58 update first ScMarkData before setting cursor (fdo#42432) The revert looks like a proper fix, because it does not reintroduce Bug 42432. Seems that something had changed since then. However, I am adding Markus so that he could just confirm if reverting that is OK.
A patch is on review: https://gerrit.libreoffice.org/31843
Mike Kaganski committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=53dbc419b2e886b345a3512cf11e035ff2b7651b tdf#63593: revert 88f91adf266f19659014df22e09ce6c6761fb6f1 It will be available in 5.4.0. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Hello, Is this bug fixed? If so, could you please close it as RESOLVED FIXED?
I waited for OP to check, but as there's no feedback, closing it as fixed.