tdf#63593: revert 88f91adf266f19659014df22e09ce6c6761fb6f1

This patch caused a regression that on creation of a new sheet
while there's an unfinished edit of a cell, by using "+" in bottom
left corner, that edit is committed to newly created sheet instead
of that in which it was performed.

Also, fixing original problem (tdf#42432), it forced the pending
edit on deleted page to go to an existing page, which could
overwrite existing data without being noticed (dataloss).

Reverting the patch does not reintroduce the original problem that
it intended to fix (a chash) in master.

Change-Id: I696a85ec9d08ebb3621ebdbce4d9f71eadcdb2c2